fix: hamburger menu contents made more readable

--- a/src/App.css
+++ b/src/App.css
@@ -111,7 +111,7 @@
   display: inline-block;
   text-decoration: none;
   margin-bottom: 10px;
-  margin-left: 20px;
+  margin-left: 30px;
   line-height: 50px;
   color: #d1d1d1;
   transition: color 0.2s;
@@ -124,11 +124,9 @@
 
 .bm-burger-button {
   position: sticky;
-  top: 0;
-  width: 34px;
-  height: 30px;
+  width: 32px;
+  height: 28px;
   left: 36px;
-  top: 36px;
 }
 
 .bm-burger-bars {
@@ -145,9 +143,10 @@
 }
 
 .bm-menu {
-  background: rgba(0, 0, 0, 0.3);
+  background: rgba(0, 0, 0, 0.7);
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
+  font-weight: 500;
   margin-top: 12px;
   margin-left: -10px;
 }
